# servitor

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  authority.example.toml  servitor.example.toml
.asha/: config.json
.github/workflows/: ci.yml  release.yml
Memory/: activeContext.md  projectbrief.md  techEnvironment.md
Memory/events/: events.jsonl
Memory/reasoning_bank/: patterns.db
Work/meetings/2026-03-20--panel--egregore-value/: phase-00-recruitment.md
Work/panels/: index.json
Work/panels/2026-03-18--agent-networking-systems/: phase-03-positions.md  phase-04-cross-examination.md  phase-07-synthesis.md  phase-08-decision.md  state.json
Work/panels/2026-03-18--competitive-analysis/: phase-00-recruitment.md  phase-03-positions.md  phase-04-cross-examination.md  phase-06-reflection.md  phase-07-synthesis.md  phase-08-decision.md  state.json
Work/panels/2026-03-18--servitor-comprehensive-review/: phase-08-decision.md  state.json
Work/panels/2026-03-18--servitor-daemon-refactor/: phase-00-recruitment.md  phase-01-framing.md  phase-03-positions.md  phase-04-cross-examination.md  phase-07-synthesis.md  phase-08-decision.md  state.json
Work/panels/2026-03-18--servitor-refactor-review/: phase-08-decision.md  state.json
Work/panels/2026-03-18--thallus-deployability-review/: phase-00-recruitment.md  phase-08-decision.md  state.json
Work/panels/2026-03-19--authority-place-analysis/: phase-00-recruitment.md  phase-01-framing.md  phase-02-infrastructure.md  phase-06-reflection.md  phase-07-synthesis.md  phase-08-decision.md
docs/: README.md  configuration.md  modes.md  operations.md  protocol.md
docs/api/: README.md
docs/deployment/: containerization.md
examples/a2a-mesh/: README.md  docker-compose.yml  docker-stack.yml  smoke-test.sh
examples/a2a-mesh/config/: authority.toml  egregore-1.yaml  egregore-2.yaml  egregore-3.yaml  servitor-1.toml  servitor-2.toml  servitor-3.toml
examples/containerized/: docker-compose.yml
examples/docker/: Dockerfile
examples/systemd/: servitor-docker-mcp.service  servitor-shell-mcp.service  servitor.service
src/: error.rs  group.rs  lib.rs  main.rs  metrics.rs
src/a2a/: card.rs  client.rs  http.rs  mod.rs  pool.rs
src/a2a/server/: card.rs  handlers.rs  mod.rs  routes.rs  state.rs
src/agent/: context.rs  direct.rs  injection.rs  loop.rs  mod.rs  output_defense.rs  provider.rs  sanitize.rs
src/agent/providers/: anthropic.rs  claude_cli.rs  codex.rs  mod.rs  openai.rs
src/authority/: config.rs  keeper.rs  mod.rs  permission.rs
src/cli/: daemon.rs  daemon_handlers.rs  exec.rs  hook.rs  info.rs  init.rs  mod.rs
src/comms/: discord.rs  mod.rs  task.rs
src/config/: mod.rs  schema.rs
src/egregore/: context.rs  hook.rs  messages.rs  mod.rs  profile.rs  publish.rs
src/events/: cron.rs  mcp.rs  mod.rs  sse.rs
src/identity/: mod.rs
src/mcp/: circuit_breaker.rs  client.rs  http.rs  mod.rs  pool.rs  stdio.rs
src/runtime/: auth_events.rs  context.rs  mod.rs  stats.rs
src/scope/: matcher.rs  mod.rs  policy.rs
src/session/: mod.rs  store.rs  transcript.rs  types.rs  watcher.rs
src/task/: filter.rs  handlers.rs  mod.rs  state.rs
tests/: integration.rs
