[package]
name = "servitor"
version = "0.1.0"
edition = "2021"
authors = ["Louis Grenzebach <pk@zalgo.net>"]
description = "Egregore network task executor using MCP servers as capabilities"
license = "MIT"
repository = "https://github.com/pknull/servitor"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# HTTP client (using rustls to avoid openssl cross-compile issues)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
reqwest-eventsource = "0.6"
eventsource-stream = "0.2"

# Discord (comms transport)
serenity = { version = "0.12", default-features = false, features = ["client", "gateway", "model", "rustls_backend"] }

# Cryptography (matching egregore)
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
sha2 = "0.10"
base64 = "0.22"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Error handling
thiserror = "1"
anyhow = "1"

# Async traits
async-trait = "0.1"

# Note: We use Claude Code CLI directly via subprocess instead of SDK
# to handle all message types (including rate_limit_event) gracefully

# Glob pattern matching (for scope enforcement)
glob = "0.3"
jsonschema = "0.18"

# Cron expression parsing
cron = "0.13"

# UUID generation
uuid = { version = "1", features = ["v4"] }

# Directory expansion
dirs = "5"
shellexpand = "3"

[dev-dependencies]
tempfile = "3"
tokio-test = "0.4"

[[bin]]
name = "servitor"
path = "src/main.rs"
